--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "chromadb>=1.0.15",
     "garminconnect>=0.2.28",
+    "ipykernel>=6.30.0",
     "openai>=1.97.1",
     "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
